--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node --experimental-transform-types ./src/main.ts"
   },
   "devDependencies": {
-    "dotenv": "^16.5.0",
+    "@types/deno": "^2.3.0",
     "@types/node": "^22.11.18",
+    "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
     "eslint-config-love": "^119.0.0",
     "prettier": "^3.5.3",
