--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@st2r/backpack-api",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A template for a Node.js project",
   "type": "module",
   "scripts": {
     "start": "node --experimental-transform-types ./src/main.ts"
   },
+  "files": [
+    "src",
+    "package.json",
+    "README.md"
+  ],
   "devDependencies": {
     "@types/deno": "^2.3.0",
     "@types/node": "^22.11.18",
